# dreamzen

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GameEngine  Makefile  README.md  cmake_install.cmake
include/glad/: glad.h
src/: glad.c  main.cpp
src/common/: typedefs.h
src/core/: Game.cpp  Game.h  engine.cpp
src/graphics/materials/: Material.cpp  Material.h
src/graphics/rendering/: Renderer.cpp  Renderer.h
src/graphics/shaders/: ShaderProgram.cpp  ShaderProgram.h  new_frag_test.fs  new_vertex_test.vs
src/input/: InputManager.cpp  InputManager.h
src/math_utils/: math_utils.cpp  math_utils.h
src/scene/camera/: Camera.cpp  Camera.h
src/scene/collision/: Collision.cpp  Collision.h
src/scene/lighting/: Lighting.cpp  Lighting.h
src/scene/manager/: SceneManager.cpp  SceneManager.h
src/scene/maps/: test_map.dzmap
src/scene/object/: GameObject.cpp  GameObject.h
src/utilities/: Utilities.cpp  Utilities.h
tests/core/: engine_tests.cpp  game_tests.cpp
tests/graphics/materials/: material_tests.cpp
tests/graphics/rendering/: renderer_tests.cpp
tests/graphics/shaders/: shader_program_tests.cpp
tests/input/: input_manager_tests.cpp
tests/math_utils/: math_utils_tests.cpp
tests/scene/camera/: camera_tests.cpp
tests/scene/collision/: collision_tests.cpp
tests/scene/lighting/: lighting_tests.cpp
tests/scene/manager/: scene_manager_tests.cpp
tests/scene/object/: game_object_tests.cpp
tests/utilities/: utilities_tests.cpp
